[package]
name = "hd-wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde_json = "1.0"
snafu = "0.6.10"
rand = "0.8.0"
pbkdf2 = "0.9"
unicode-normalization = "0.1.19"
hex = "0.4.3"
hmac = "0.11.0"
sha2 = "0.9.8"
bs58 = "0.4.0"
ripemd160 = "0.9.1"
num-bigint = "0.4.3"
num-traits = "0.2.14"

[dev-dependencies]
bip32 = { version = "0.2.2", features = ["alloc"] }
